--- a/app/src/main/res/layout/activity_sqlite.xml
+++ b/app/src/main/res/layout/activity_sqlite.xml
@@ -5,34 +5,34 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/startButtn"
+        android:id="@+id/createDatabase"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/start_btn"
+        android:text="createDatabase"
         />
 
     <Button
-        android:id="@+id/endBubttn"
+        android:id="@+id/updateDatabase"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/end_btn"
+        android:text="updateDatabase"
         />
 
     <Button
-        android:id="@+id/progress"
+        android:id="@+id/insert"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="progress bar"/>
+        android:text="insert"/>
 
     <Button
-        android:id="@+id/handerThreadTest"
+        android:id="@+id/update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hadler Thread"/>
+        android:text="update"/>
 
     <Button
-        android:id="@+id/sqliteTest"
+        android:id="@+id/query"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SQLite Test"/>
+        android:text="query"/>
 </LinearLayout>
