--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="SQLite Test"/>
+
+    <Button
+        android:id="@+id/contentProvider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Content Provider"/>
 </LinearLayout>
