--- a/app/src/main/res/layout/activity_content_provider.xml
+++ b/app/src/main/res/layout/activity_content_provider.xml
@@ -12,4 +12,11 @@
         />
 
 
+    <Button
+        android:id="@+id/queryBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="query"/>
+
+
 </LinearLayout>
