--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,4 +53,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Service"/>
+
+    <Button
+        android:id="@+id/webviewTest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Web View"/>
 </LinearLayout>
