--- a/app/src/main/res/layout/activity_content_provider.xml
+++ b/app/src/main/res/layout/activity_content_provider.xml
@@ -18,5 +18,11 @@
         android:layout_height="wrap_content"
         android:text="query"/>
 
+    <Button
+        android:id="@+id/sendBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="send sms"/>
+
 
 </LinearLayout>
