--- a/clientapp/src/main/res/layout/activity_aidl.xml
+++ b/clientapp/src/main/res/layout/activity_aidl.xml
@@ -2,10 +2,20 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.clientapp.MainActivity">
+    tools:context="com.example.clientapp.AidlActivity">
+
+
+    <TextView
+        android:id="@+id/hello"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.LinearLayoutCompat
         android:orientation="vertical"
@@ -15,24 +25,23 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="aidl"
-            android:text="aidl"/>
+            android:onClick="avg"
+            android:text="avg"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="messenger"
-            android:text="messenger"
-            />
+            android:onClick="bindService"
+            android:text="bindService"/>
+
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="localBinderTest"
-            android:text="Local Binder"/>
+            android:onClick="unbindService"
+            android:text="unbindService"/>
+
 
     </android.support.v7.widget.LinearLayoutCompat>
-
-
 
 </android.support.constraint.ConstraintLayout>
