--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.jin.myapplication.contentprovider.NoteActivity">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="grant permission"
+        android:onClick="GrantPermissionForTest"/>
+
+
 </android.support.constraint.ConstraintLayout>
