--- a/clientapp/src/main/res/layout/activity_accpet.xml
+++ b/clientapp/src/main/res/layout/activity_accpet.xml
@@ -13,4 +13,9 @@
         android:text="insert notes"
         android:onClick="insertNotes"/>
 
+    <TextView
+        android:id="@+id/result"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </android.support.constraint.ConstraintLayout>
