--- a/clientapp/src/main/res/layout/activity_accpet.xml
+++ b/clientapp/src/main/res/layout/activity_accpet.xml
@@ -25,6 +25,12 @@
             android:text="deleteNotes"
             android:onClick="deleteNotes"/>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="grantClientapp2"
+            android:onClick="grantClientapp2"/>
+
     </android.support.v7.widget.LinearLayoutCompat>
 
     <TextView
