--- a/clientapp/src/main/res/layout/activity_accpet.xml
+++ b/clientapp/src/main/res/layout/activity_accpet.xml
@@ -16,6 +16,12 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="refresh"
+            android:onClick="refresh"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="insert notes"
             android:onClick="insertNotes"/>
 
