--- a/app/src/main/res/layout/activity_content_provider.xml
+++ b/app/src/main/res/layout/activity_content_provider.xml
@@ -24,5 +24,11 @@
         android:layout_height="wrap_content"
         android:text="send sms"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="note activity"
+        android:onClick="noteActivity"/>
+
 
 </LinearLayout>
