--- a/app/src/main/res/layout/activity_package.xml
+++ b/app/src/main/res/layout/activity_package.xml
@@ -24,6 +24,12 @@
             android:text="showClient"
             android:onClick="showClient"/>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="permissionActivity"
+            android:onClick="permissionActivity"/>
+
     </android.support.v7.widget.LinearLayoutCompat>
 
 
