--- a/app/src/main/res/layout/activity_calculate.xml
+++ b/app/src/main/res/layout/activity_calculate.xml
@@ -7,7 +7,6 @@
     android:orientation="vertical"
     tools:context=".calculate.CalculateActivity">
 
-
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -68,9 +67,20 @@
         android:onClick="calc"/>
 
     <TextView
-        android:id="@+id/show_result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="结果是："/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/show_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""/>
+
+    </ScrollView>
 
 </LinearLayout>
